k8s/istio/gateway.yaml
#kubectl apply -f k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80 # 80 -> 32575(node)
        name: http
        protocol: http2
      hosts:
        - "*" # use your domain here

---
# kubectl apply -f k8s/istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
#    - nginx-service
    - "*" # bind to gateway
  gateways:
    - ingress-gateway-k3s # bind to gateway
  http:
    - route:
        - destination:
            host: nginx-service
            subset: v1 # FLOW: nginx svc -> vs -> subset v1 -> DR
          weight: 0
        - destination:
            host: nginx-service
            subset: v2
          weight: 100
---
# kubectl apply -f k8s/istio/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: "1.0" # FLOW: VS -> DR subset v1 -> Pod with label version: "1.0"
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: "2.0"
